fixed text align in userstatus

--- a/frontend/src/component/Dashboard/UserStatus.styl
+++ b/frontend/src/component/Dashboard/UserStatus.styl
@@ -15,6 +15,7 @@
     padding 25px 0 15px 0
     &__text
       margin-left 15px
+      text-align left
   &__notification
     display flex
     align-items center
